--- a/evaluacion.html
+++ b/evaluacion.html
@@ -12,81 +12,41 @@
     <form id="formularioGAD">
       <p>Indicá con qué frecuencia has experimentado lo siguiente en las últimas 2 semanas:</p>
 
-      <div class="pregunta">
-        <label>1. Sentirse nervioso, ansioso o al borde de los nervios:</label><br/>
-        <select name="q1">
-          <option value="0">Nunca</option>
-          <option value="1">Varios días</option>
-          <option value="2">Más de la mitad de los días</option>
-          <option value="3">Casi todos los días</option>
-        </select>
+      <!-- Preguntas -->
+      <div class="pregunta"><label>1. Sentirse nervioso, ansioso o al borde de los nervios:</label><br/>
+        <select name="q1"><option value="0">Nunca</option><option value="1">Varios días</option><option value="2">Más de la mitad de los días</option><option value="3">Casi todos los días</option></select>
+      </div>
+      <div class="pregunta"><label>2. No poder dejar de preocuparse:</label><br/>
+        <select name="q2"><option value="0">Nunca</option><option value="1">Varios días</option><option value="2">Más de la mitad de los días</option><option value="3">Casi todos los días</option></select>
+      </div>
+      <div class="pregunta"><label>3. Preocuparse por demasiadas cosas diferentes:</label><br/>
+        <select name="q3"><option value="0">Nunca</option><option value="1">Varios días</option><option value="2">Más de la mitad de los días</option><option value="3">Casi todos los días</option></select>
+      </div>
+      <div class="pregunta"><label>4. Dificultad para relajarse:</label><br/>
+        <select name="q4"><option value="0">Nunca</option><option value="1">Varios días</option><option value="2">Más de la mitad de los días</option><option value="3">Casi todos los días</option></select>
+      </div>
+      <div class="pregunta"><label>5. Estar tan inquieto que es difícil quedarse quieto:</label><br/>
+        <select name="q5"><option value="0">Nunca</option><option value="1">Varios días</option><option value="2">Más de la mitad de los días</option><option value="3">Casi todos los días</option></select>
+      </div>
+      <div class="pregunta"><label>6. Irritarse fácilmente o enojarse con facilidad:</label><br/>
+        <select name="q6"><option value="0">Nunca</option><option value="1">Varios días</option><option value="2">Más de la mitad de los días</option><option value="3">Casi todos los días</option></select>
+      </div>
+      <div class="pregunta"><label>7. Sentir miedo como si algo horrible fuera a pasar:</label><br/>
+        <select name="q7"><option value="0">Nunca</option><option value="1">Varios días</option><option value="2">Más de la mitad de los días</option><option value="3">Casi todos los días</option></select>
       </div>
 
-      <div class="pregunta">
-        <label>2. No poder dejar de preocuparse:</label><br/>
-        <select name="q2">
-          <option value="0">Nunca</option>
-          <option value="1">Varios días</option>
-          <option value="2">Más de la mitad de los días</option>
-          <option value="3">Casi todos los días</option>
-        </select>
-      </div>
-
-      <div class="pregunta">
-        <label>3. Preocuparse por demasiadas cosas diferentes:</label><br/>
-        <select name="q3">
-          <option value="0">Nunca</option>
-          <option value="1">Varios días</option>
-          <option value="2">Más de la mitad de los días</option>
-          <option value="3">Casi todos los días</option>
-        </select>
-      </div>
-
-      <div class="pregunta">
-        <label>4. Dificultad para relajarse:</label><br/>
-        <select name="q4">
-          <option value="0">Nunca</option>
-          <option value="1">Varios días</option>
-          <option value="2">Más de la mitad de los días</option>
-          <option value="3">Casi todos los días</option>
-        </select>
-      </div>
-
-      <div class="pregunta">
-        <label>5. Estar tan inquieto que es difícil quedarse quieto:</label><br/>
-        <select name="q5">
-          <option value="0">Nunca</option>
-          <option value="1">Varios días</option>
-          <option value="2">Más de la mitad de los días</option>
-          <option value="3">Casi todos los días</option>
-        </select>
-      </div>
-
-      <div class="pregunta">
-        <label>6. Irritarse fácilmente o enojarse con facilidad:</label><br/>
-        <select name="q6">
-          <option value="0">Nunca</option>
-          <option value="1">Varios días</option>
-          <option value="2">Más de la mitad de los días</option>
-          <option value="3">Casi todos los días</option>
-        </select>
-      </div>
-
-      <div class="pregunta">
-        <label>7. Sentir miedo como si algo horrible fuera a pasar:</label><br/>
-        <select name="q7">
-          <option value="0">Nunca</option>
-          <option value="1">Varios días</option>
-          <option value="2">Más de la mitad de los días</option>
-          <option value="3">Casi todos los días</option>
-        </select>
-      </div>
-
+      <!-- Botón -->
       <button type="button" class="boton" onclick="calcularGAD()">Ver resultado</button>
     </form>
 
-    <div id="resultado" style="margin-top: 20px;"></div>
-    <div id="botonesExtras" style="margin-top: 20px;"></div>
+    <!-- Resultado -->
+    <div id="resultado" style="margin-top: 25px; font-weight: bold;"></div>
+
+    <!-- Botones de navegación -->
+    <div id="botonesExtras" style="margin-top: 30px;">
+      <a href="index.html" class="boton">Volver a principal</a>
+      <a href="TecnicasAnsiedad.html" class="boton">Ver técnicas para la ansiedad</a>
+    </div>
   </div>
 
   <script>
@@ -101,15 +61,16 @@
       if (total <= 4) nivel = "Ansiedad mínima";
       else if (total <= 9) nivel = "Ansiedad leve";
       else if (total <= 14) nivel = "Ansiedad moderada";
-      else nivel = "Ansiedad grave";
+      else nivel = "Ansiedad severa";
 
-      document.getElementById("resultado").innerHTML =
-        `<p><strong>Puntaje total:</strong> ${total} / 21</p><p><strong>Nivel:</strong> ${nivel}</p>`;
-
-      document.getElementById("botonesExtras").innerHTML = `
-        <a href="index.html" class="boton">Volver a la página principal</a>
-        <a href="TecnicasAnsiedad.html" class="boton">Ver técnicas para la ansiedad</a>
+      const resultado = document.getElementById("resultado");
+      resultado.innerHTML = `
+        <p><strong>Puntaje total:</strong> ${total} / 21</p>
+        <p><strong>Nivel:</strong> ${nivel}</p>
       `;
+
+      // Hace scroll hasta el resultado para que el usuario lo vea
+      resultado.scrollIntoView({ behavior: "smooth", block: "center" });
     }
   </script>
 </body>
